rendered a basic line chart by HighCharts

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <div id="root">
         root.
         <div id="destination"></div>
+        <div id="chart-container"></div>
     </div>
     
     <script src="/bundle.js"></script>
